--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -8,82 +8,89 @@ call_for_sponsor: true
 main:
   price: € 10,000
   offer:
-    - Banchetto 1m x 2m in sala o nella hall
-    - Accesso alla lista partecipanti opt-in (in conformità alle leggi vigenti)
-    - Possibilità di tenere un talk tecnico (sono escluse le tematiche commerciali).
-      Il talk dovrà essere preapprovato dagli organizzatori.
-    - Banchetto principale 2m x 1m in sala o nella hall
-    - Posizionamento vostro roll-up in sala
-    - Vostro logo sui roll-up dell'evento
-    - Pubblicità nelle comunicazioni pre-evento
-    - Banner sul sito
-    - Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)
-    - 10 biglietti gratuiti
+    - 1 dedicated session (30 mins max, no commercial talks accepted)
+    - One direct email marketing campaign
+    - Access to opt-in attendees list
+    - Your logo in pre-event communications
+    - Your logo on conference website
+    - Your logo on conference rollups
+    - Your own rollup in the conference room
+    - Main Stand (table 2m x 1m)
+    - Bring your own gadgets (flyers, stickers, t-shirts)
+    - 5 free tickets
+    - 5 tickets with 50% discount
   max: 1
   list:
 
 diamond:
   price: € 5,000
   offer:
-    - Banchetto 1m x 1m in sala o nella hall
-    - Accesso alla lista partecipanti opt-in (in conformità alle leggi vigenti)
-    - Posizionamento vostro roll-up in sala
-    - Vostro logo sui roll-up dell'evento
-    - Pubblicità nelle comunicazioni pre-evento
-    - Banner sul sito
-    - Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)
-    - 6 biglietti gratuiti
+    - Access to opt-in attendees list
+    - Your logo in pre-event communications
+    - Your logo on conference website
+    - Your logo on conference rollups
+    - Your own rollup in the conference room
+    - Stand (table 2m x 1m)
+    - Bring your own gadgets (flyers, stickers, t-shirts)
+    - 2 free tickets
+    - 5 tickets with 20% discount
   max: 2
   list:
-#   -
-#     url: http://www.4devops.it?utm_source=containerday
-#     image: 4devops.svg
+
 platinum:
   price: € 3,000
   offer:
-    - Banchetto 1m x 1m in sala o nella hall
-    - Posizionamento vostro roll-up in sala
-    - Vostro logo sui roll-up dell'evento
-    - Pubblicità nelle comunicazioni pre-evento
-    - Banner sul sito
-    - Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)
-    - 4 biglietti gratuiti
-  max: 8
+    - Your logo in pre-event communications
+    - Your logo on conference website
+    - Your logo on conference rollups
+    - Your own rollup in the conference room
+    - Stand (table 1m x 1m)
+    - Bring your own gadgets (flyers, stickers, t-shirts)
+    - 1 free ticket
+    - 5 tickets with 15% discount
+  max: 4
   list:
-#    -
-#      url: http://www.ideato.it?utm_source=containerday
-#      image: ideato.svg
+
 
 gold:
-  price: € 1,000
+  price: € 1,500
   offer:
-    - Posizionamento vostro roll-up in sala
-    - Vostro logo sui roll-up dell'evento
-    - Pubblicità nelle comunicazioni pre-evento
-    - Banner sul sito
-    - Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)
-    - 3 biglietti gratuiti
+    - Your logo in pre-event communications
+    - Your logo on conference website
+    - Your logo on conference rollups
+    - Your own rollup in the conference room
+    - Bring your own gadgets (flyers, stickers, t-shirts)
+    - 3 tickets with 15% discount
+  max: 8
+  list:
+   -
+     url: https://www.workwave.com/
+     image: workwave.svg
+   -
+      url: https://www.ideato.it/?utm_source=laravelday
+      image: ideato.svg
+silver:
+  price: € 750
+  offer:
+    - Your logo in pre-event communications
+    - Your logo on conference website
+    - Your logo on conference rollups
+    - Bring your own gadgets (flyers, stickers, t-shirts)
+    - 3 tickets with 10% discount
   max: 16
   list:
-
-silver:
-  price: € 500
-  offer:
-    - Vostro logo sui roll-up dell'evento
-    - Pubblicità nelle comunicazioni pre-evento
-    - Banner sul sito
-    - Autorizzazione a portare pubblicità e gadget (volantini, adesivi, magliette)
-    - 2 biglietti gratuiti
-  max: 32
-  list:
-#    -
-#      url: https://www.workwave.com/?utm_source=containerday
-#      image: workwave.svg
+    -
+      url: https://labs.madisoft.it/?utm_source=reactjsday
+      image: madisoft.svg
+    -
+      url: https://www.balsamiq.com?utm_source=reactjsday
+      image: balsamiq.svg
 
 bronze:
-  price: € 300
+  price: € 500
   offer:
-    - Banner sul sito
-    - 1 biglietto gratuito
-  max: 64
+    - Your logo in pre-event communications
+    - Your logo on conference website
+    - 2 tickets with 10% discount
+  max: 32
   list:
