--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "devDependencies": {
     "dustman": "^1.11.55",
-    "frontsize": "git+https://github.com/ideatosrl/frontsize.git#372f2a6"
+    "frontsize": "git+https://github.com/ideatosrl/frontsize.git#372f2a6",
+    "gulp": "^4.0.0"
   },
   "scripts": {
     "build": "./node_modules/.bin/gulp -S --config dustman-incontrodeops.yml",
@@ -24,10 +25,10 @@
   "homepage": "https://github.com/GrUSP/2019.incontrodevops.it#readme",
   "dependencies": {
     "colour": "^0.7.1",
-    "gulp": "^4.0.0",
     "jquery": "^3.1.1",
     "js-yaml": "^3.12.0",
     "merge": "^1.2.1",
+    "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
     "npm": "^5.8.0"
   }
