--- a/_data/venue.yml
+++ b/_data/venue.yml
@@ -1,3 +1,3 @@
-map: https://goo.gl/maps/iqQ6n6bNAf72
-name: Hotel San Marco
-where: Via Longhena 42, 37138, Verona, Italy
+map: hhttps://goo.gl/maps/pT6toDSe3Em
+name: Hotel Savoia Regency
+where: Via del Pilasto 2, 40127, Bologna BO
