--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -9,7 +9,7 @@ year: 2019
 since: 2018
 talks_available: false
 schedule_available: false
-workshop_available: false
+workshop_available: true
 
 iubenda:
   cookiePolicyId:
