--- a/_data/workshops.yml
+++ b/_data/workshops.yml
@@ -26,7 +26,7 @@ list:
     addressed_info: |
       Alla fine del corso saprai disegnare e implementare infrastrutture cloud AWS performanti, sicure ed affidabili con un’attenzione anche al contenimento e ottimizzazione dei costi.
     useful_info: |
-      La durata del corso è di una giornata e **si terrà il 7 Marzo** (il giorno prima del ContainerDay).
+      La durata del corso è di una giornata e **si terrà il 7 Marzo** (il giorno prima della conferenza).
       Qualche giorno prima del corso verrà fornito un voucer di accesso ai servizi AWS a tutti i partecipanti.
       È responsabilità del partecipante arrivare con portatile configurato e funzionante. Vi daremo tutte le indicazioni utili per la configurazione.
   -
